--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@floating-ui/dom": "1.6.1",
-		"highlight.js": "11.9.0"
+		"highlight.js": "11.9.0",
+		"lucide-svelte": "^0.363.0"
 	}
 }
